--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Landloper--The-Romance-of-a-Man-on-Foot_4712
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Day, Holman
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1556
     wikipedia: http://en.wikipedia.org/wiki/Holman_Day
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4712#The-Landloper--The-Romance-of-a-Man-on-Foot
 gutenberg_issued: '2006-04-13'
 gutenberg_type: Text
 identifiers:
